# gcp-cloud-deploy-extensions

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: pull_request_template.md
data-samples/: approvals.json  operations.json  resources.json
demo/: README.md
demo/nginx-app/: README.md  cloudbuild.yaml  skaffold.yaml
demo/nginx-app/kustomize/bases/: knative_service.yaml  kustomization.yaml
demo/nginx-app/kustomize/overlays/dev/: static_patches.yaml
demo/nginx-app/kustomize/overlays/prod/: kustomization.yaml  static_patches.yaml
demo/nginx-app/kustomize/overlays/staging/: static_patches.yaml
demo/nginx-app/terraform/: iam.tf  main.tf  outputs.tf  variables.tf
demo/terragrunt/: README.md  backend.tf  example.config.hcl  example.config.hcl.json  terragrunt.hcl
demo/terragrunt/app-artifact-registry/: extra_outputs.tf  terragrunt.hcl
demo/terragrunt/cloud-deploy-foundation/: terragrunt.hcl
demo/terragrunt/echo-fastapi/: terragrunt.hcl
demo/terragrunt/echo-fastapi-extension/: terragrunt.hcl
demo/terragrunt/image-tagger-extension/: terragrunt.hcl
demo/terragrunt/image-tagger-notifier/: terragrunt.hcl
demo/terragrunt/nginx-app-infra/: terragrunt.hcl
demo/terragrunt/release-auto-promoter/: terragrunt.hcl
demo/terragrunt/release-auto-promoter-extension/: terragrunt.hcl
demo/terragrunt/release-auto-promoter-notifier/: terragrunt.hcl
demo/tg-runner-webapp/: main.py  pyproject.toml
demo/tg-runner-webapp/static/: styles.scss
demo/tg-runner-webapp/templates/: index.html  workspace.html
extensions/echo-fastapi/: README.md  cloudbuild.yaml  pyproject.toml
extensions/echo-fastapi/src/: main.py  notifier.py  settings.py
extensions/echo-fastapi/test/: conftest.py
extensions/echo-fastapi/test/unit/: main_test.py
extensions/image-tagger/: README.md  example.env  pyproject.toml
extensions/image-tagger/src/: extension.py  main.py  notifier.py  settings.py
extensions/release-auto-promoter/: README.md  example.env  pyproject.toml
extensions/release-auto-promoter/src/: extension.py  main.py  settings.py
lib/python-extension/: pyproject.toml
lib/python-extension/clouddeploy_extension/: extension.py  log_config.py  types.py
lib/python-extension/tests/: extension_test.py
lib/python-notifier/: README.md  pyproject.toml
lib/python-notifier/cloud_deploy_notifier/: config.py  logging.py  main.py  notifier.py
lib/python-notifier/clouddeploy_notifier/: exceptions.py  log_config.py  logging.py  notifier.py  settings.py  types.py
notifiers/echo-fastapi/: Dockerfile  README.md  example.tfvars  pyproject.toml
notifiers/echo-fastapi/src/: logging.py  main.py  notifier.py  settings.py  types.py
notifiers/echo-fastapi/terraform/: iam.tf  main.tf  outputs.tf  variables.tf
notifiers/image-tagger/: README.md  cloudbuild.yaml  example.env  pyproject.toml
notifiers/image-tagger/src/: main.py  notifier.py  settings.py
notifiers/release-auto-promoter/: README.md  cloudbuild.yaml  example.env  example.tfvars  pyproject.toml
notifiers/release-auto-promoter/src/: config.py  main.py  notifier.py  settings.py
notifiers/release-auto-promoter/test/unit/: main_test.py
reactors/echo-fastapi/: Dockerfile  README.md  pyproject.toml
reactors/echo-fastapi/src/: main.py  types.py
reactors/echo-fastapi/terraform/: iam.tf  main.tf  outputs.tf
terraform/cloud-deploy-extension/: README.md  iam.tf  main.tf  outputs.tf  variables.tf
terraform/cloud-deploy-extension-infra/: README.md  main.tf  variables.tf
terraform/cloud-deploy-notification-infra/: README.md  main.tf  outputs.tf  variables.tf
terraform/cloud-deploy-notifier/: README.md  iam.tf  main.tf  outputs.tf  variables.tf
