[tool.poetry]
authors = ["Brandon Bjelland <brandon@atscale.run>"]
description = ""
name = "echo-fastapi"
packages = [{include = "src"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.92.0"
python = "^3.10"
python-clouddeploy-extension = {git = "https://github.com/computeclub/gcp-cloud-deploy-extensions.git", subdirectory = "lib/python-extension"}# , tag = "v0.1.0"}
# python-clouddeploy-extension = {path = "../../lib/python-extension", develop = true}
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pre-commit = "^2.20.0"
pylint = "^2.15.9"
pytest = "^7.2.1"

[tool.pylint.main]
fail-under = 8
ignore-paths = []
max-line-length = 120
recursive = 'true'

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
