[tool.poetry]
authors = ["Brandon Bjelland <brandonjacob@google.com>"]
description = ""
name = "release-auto-promoter"
packages = [
  {include = "src"},
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.89.1"
google-cloud-deploy = "^1.6.1"
python = "^3.10"
python-clouddeploy-notifier = {path = "../../lib/python-notifier", develop = true}
uvicorn = "^0.20.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
